fixed trade-button spacing, re-ordered icons

--- a/app/less/partials/market-row.less
+++ b/app/less/partials/market-row.less
@@ -15,8 +15,8 @@
           }
 
           @media (min-width: @screen-sm-min) {
-               & .btn {
-                    margin-left: 4px;
+               .trade-button {
+                    margin: 0 0 0 0.5rem;
                }
 
                // effectively makes text span just until the button. and aligns them vertically
